# aiomrim

./: .gitignore  README.md  pyproject.toml  setup.py
aiomrim/: __main__.py  account.py  admin.py  check_connection.py  exceptions.py  online.py  welcome.py
docs/: docs.md
