[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aiomrim"
dynamic = ["version"]

description = "Awesome SDK for Async Operations with MRIM Protocol (Mail.Ru Agent)" 
readme = "README.md"
requires-python = ">=3.11"

license = "GPL-3.0-only" 

authors = [
    { name = "fayzetwin", email = "contact@fayzetwin.xyz" },
]
dependencies = [
    "aiohttp >= 3.12.0",
]

[project.urls]
Homepage = "https://github.com/fayzetwin1/aiomrim"
"Bug Tracker" = "https://github.com/fayzetwin1/aiomrim/issues" 